# agetech-comic

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.githooks/: pre-push
.github/: pull_request_template.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: comics.py  line_webhook.py
backend/app/core/: config.py
backend/app/models/: comic.py
backend/app/services/: comic_generator.py  image_generator.py  pocketbase_client.py
backend/tests/: test_health.py
docs/: DEVELOPMENT.md  accessibility-spec-base.md  accessibility-spec-v1.md  api-contract-additions.md  architecture-line-hybrid.md  design-guidelines.md  prd.md
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/capture/: page.tsx
frontend/src/app/collection/: page.tsx
frontend/src/app/events/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/new/: page.tsx
frontend/src/components/: AccessibleButton.tsx  AmiCat.tsx  BackButton.tsx  CharacterStage.tsx  ComicPanels.tsx  ComingSoon.tsx  ErrorNotice.tsx  Icon.tsx  NavRow.tsx  PawCard.tsx  SalutationChooser.tsx  ScreenHeading.tsx  SubtitleBox.tsx
frontend/src/context/: FlowContext.tsx
frontend/src/data/: collection.ts  comic.ts  logline.ts  narrator.ts  profile.ts  questions.ts  rewards.ts  tags.ts  types.ts
frontend/src/hooks/: useDebouncedAction.ts  useIdleHint.ts  useSpeech.ts
frontend/src/lib/: api.ts
pocketbase/: Dockerfile
pocketbase/pb_migrations/: 1700000000_create_diaries.js
shared/: tags.json
(+8 files in other folders)
